Fixed: map view and z-index

--- a/Client/web-ui/src/App.scss
+++ b/Client/web-ui/src/App.scss
@@ -28,13 +28,12 @@
 }
 
 .Map {
+  position:fixed;
   grid-area: 1 / 1 / 3 / end;
-  z-index: 1;
 }
 
 .Main {
   grid-area: main;
-  z-index: 2;
 }
 
 .Footer {
